finish social app without css

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "/Users/leo/miniconda3/envs/myEnv/bin/python"
+    "python.pythonPath": "/Users/leo/miniconda3/envs/myEnv/bin/python",
+    "python.linting.pylintEnabled": false
 }
